[tool.poetry]
name = "chatgpt"
version = "0.3.4"
description = "Interface for ChatGPT via foundational models API (OpenAI / Anthropic / Replicate"
authors = ["Konstantin Kuteykin <konstantin.neurocreate@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
langchain-anthropic = "^0.3.4"
replicate = "^1.0.7"
langchain-openai = "^0.3.14"
langchain-community = "^0.3.16"
python-dotenv = "^1.0.1"
streamlit = "^1.51.0"
openai = "^2.6.1"
anthropic = "^0.71.0"
tavily-python = "^0.5.0"
tavily = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
